部分文件确认提交

--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: blog_production
+  database: blog_fish_production
   pool: 5
   username: tiemei
   password: jia
